load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(["glb-viewer.html", "glb-viewer.css", "glb-viewer.js"])

filegroup(
    name = "glb_viewer",
    srcs = [
        "glb-viewer.html",
        "glb-viewer.css",
        "glb-viewer.js",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "server",
    srcs = ["server.rs"],
    edition = "2021",
    data = [
        ":glb_viewer",
    ],
    deps = [
        "@crates//:axum",
        "@crates//:tokio",
        "@crates//:tower-http",
        "@crates//:tower",
        "@crates//:clap",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
