module(
    name = "glb_viewer",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    package = "axum",
    version = "0.7",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.0",
)
crate.spec(
    features = [
        "fs",
        "cors",
    ],
    package = "tower-http",
    version = "0.5",
)
crate.spec(
    package = "tower",
    version = "0.4",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.0",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    package = "tracing-subscriber",
    version = "0.3",
)

# This will generate the lockfile automatically
crate.from_specs()
use_repo(crate, "crates")
